# specialised-study-project.revised.python

./: .gitattributes  .gitignore  .gitmodules  .replicate.sh  .setup.sh  .workflow.sh  Licen.md  README.md  Readme.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-matrice.yml  python.yml  rependencies.yml
.venve/: pyvenv.cfg
SpecialisedStudyProject/: main_entry.py
SpecialisedStudyProject/frontend/: __init__.py  application.py  application_interface_adapter.py  controller.py  memory_management.py  system_controller.py  systemcontroller.py
SpecialisedStudyProject/frontend/memory/: __init__.py  environment_variables.py
SpecialisedStudyProject/logic/: __init__.py
SpecialisedStudyProject/logic/objects/: __init__.py  token.py
SpecialisedStudyProject/logic/streams/: __init__.py  token_stream.py
SpecialisedStudyProject/persistence/database/: __init__.py  database_skeleton.py  sqlite3_database.py
SpecialisedStudyProject/templates/: __init__.py
SpecialisedStudyProject/templates/events/: __init__.py  on_change.py  on_found.py
SpecialisedStudyProject/templates/objects/: __init__.py  word.py
SpecialisedStudyProject/templates/streams/: __init__.py  stream_maps.py
application/: readme.md
code/: .gitignore  analyze.py  dataset.py  test.py  train.py  validation.py
code/libraries/: database.py  dataset.py
code/libraries/db/: setup.py
scripts/: install.sh  readme.md  setup.sh  workflow.sh
scripts/windows/: environment.ps1  windows_setup_environment.ps1
src/: .gitignore  entry.py
src/ssp/: application.py
src/ssp/algorithms/: function_class.py
ssp/: __init__.py  adhoc.py  application.py  entry.py  setup.py
ssp/adhoc/: __init__.py
ssp/algorithms/: __init__.py
ssp/algorithms/naive/: NaiveBayes.py
ssp/algorithms/smoothing/: laplace.py
ssp/builders/: __init__.py  dataset_builder_by_directory.py  dataset_factories.py
ssp/builders/action_events/: __init__.py  categories.py  dataset_labels.py  datasets.py  documents.py
ssp/builders/events/: __init__.py  categories.py  dataset_labels.py  datasets.py
ssp/dataset/: __init__.py  categories.py  corpus.py  corpus_set.py  counters.py  documents.py  preprocessor.py
ssp/dataset/tokens/: __init__.py  categories.py  documents.py  tokens.py
ssp/factories/: __init__.py  dataset_factories.py  directory_factories.py
ssp/factories/events/: __init__.py  categories.py  dataset_labels.py  datasets.py  documents.py
ssp/frontend/: __init__.py  application.py  categories.py  controller.py  dataset.py  datasets.py  environment.py  queue.py
ssp/frontend/commands/: __init__.py  action_event.py  command.py  command_options.py  process_event.py
ssp/frontend/environments/: __init__.py  export_singleton.py  exports.py
ssp/frontend/events/: __init__.py  categories.py  dataset_labels.py  datasets.py  documents.py
ssp/frontend/io/: __init__.py  category_map.py  dataset_document.py  dataset_map.py  map.py
ssp/frontend/processes/: __init__.py  calculate_action.py  debuggable_action.py
ssp/globals/: __init__.py
ssp/globals/variables/: __init__.py  constants.py  states.py
ssp/logic/: __init__.py
ssp/logic/algorithms/: __init__.py
ssp/logic/dataset/: __init__.py  categories.py  corpus.py  corpus_set.py  documents.py  exceptions.py  preprocessor.py
ssp/logic/objects/: __init__.py  category_token.py  document_tokens.py  words.py
ssp/logic/structures/: __init__.py  categories.py  category.py  category_token.py  counters.py  datasets.py  (+6 more)
ssp/persistence/: __init__.py  category_map.py  dataset_document.py  dataset_map.py  dataset_map_builder.py  document_loader.py  exceptions.py
ssp/structures/: __init__.py
ssp/variables/: __init__.py  constants.py  environments.py  labels.py  states.py
tests/: __init__.py  globals.py  strings.py  test_application.py  test_builder.py  test_category.py  test_corpus.py  test_counter.py  test_default.py  test_document.py  test_entry.py  test_of_stream_maps.py  test_path.py  test_random.py  test_token.py  test_token_factory.py  test_tokens.py
tests/frontend/: test_dataset.py  test_env.py  test_exports.py
tests/logic/: test_corpus.py  test_counter.py  test_counter_operator.py  test_document_token.py  test_token.py  test_token_factory.py
tests/maps/: test_stream_map.py  testing_stream_map.py
tests/patterns/: test_wheel_pattern.py  wheel.py
(+61 files in other folders)
