[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sspr.python.by.designermadsen"
dynamic = [ "version" ]

authors = [
  { name="Kent vejrup Madsen", email="Kent.vejrup.Madsen@outlook.com" },
]

readme = { file="Readme.md" }
license = { file="License.md" }

description = "a revised school project that i have programmed in python instead of C#."
requires-python = ">=3.10"

dependencies = [

]

optional-dependencies = [

]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/KentVejrupMadsen/specialised-study-project.revised.python"
"Issues" = "https://github.com/KentVejrupMadsen/specialised-study-project.revised.python/issues"

[tool.setuptools.packages.find]
where = ["ssp"]
include = ["src.*"]
exclude = ["tests.*"]